data/derived/sp14/progs/unify/prog2002.ml.out
Characters 436-448:
  | Comp (e1,e2,e3) -> float_of_int -1 *. eval (e1,x,y) *. eval (e2,x,y) *. eval (e3,x,y);;
                       ^^^^^^^^^^^^
Error: This expression has type int -> float
       but an expression was expected of type int
